REGRESSION (r63854-63958): placeholder not shown for number inputs https://bugs.webkit.org/show_bug.cgi?id=61095

Reviewed by Darin Adler.

Refactor HTMLInputElement supportsPlaceholder support to delegate to the
InputType. Make BaseTextInputType and NumberInputType return true, matching
the current HTML5 spec.

* html/BaseTextInputType.cpp:
(WebCore::BaseTextInputType::supportsPlaceholder):
* html/BaseTextInputType.h:
Add override implementation of supportsPlaceholder that returns true.

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::supportsPlaceholder):
Delegate to the InputType.

* html/InputType.cpp:
(WebCore::InputType::supportsPlaceholder):
* html/InputType.h:
Add base implementation of supportsPlaceholder that returns false.

* html/NumberInputType.cpp:
(WebCore::NumberInputType::supportsPlaceholder):
* html/NumberInputType.h:
Add override implementation of supportsPlaceholder that returns true.



Canonical link: https://commits.webkit.org/78523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89194 268f45cc-cd09-0410-ab3c-d52691b4dbfc