Source/WebCore/html/InputType.cpp
@@ -649,6 +649,11 @@ bool InputType::shouldRespectHeightAndWidthAttributes()
     return false;
 }
 
+bool InputType::supportsPlaceholder() const
+{
+    return false;
+}
+
 namespace InputTypeNames {
 
 // The type names must be lowercased because they will be the return values of
